# tachy

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.atl/: skill-registry.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: index.ts
src/components/common/: UpdateBanner.tsx  index.ts
src/components/file-browser/: CloudBadge.tsx  FileGrid.tsx  FileItem.tsx  FileList.tsx  HomeView.tsx
src/components/layout/: PreviewPanel.tsx  Sidebar.tsx  Toolbar.tsx
src/hooks/: index.ts  useAppUpdate.ts  useContextMenu.ts  useFileOperations.ts
src/services/: systemService.ts
src/store/: index.ts  pinnedStore.ts  tabStore.ts
src/types/: file.types.ts
