[package]
name = "tachy"
version = "0.1.1"
description = "A modern file explorer for Windows 11"
authors = ["Edgar"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = "0.4"

# Thumbnail generation + Cloud Files API (sync status) + WinRT share dialog
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Foundation",
    "Foundation_Collections",
    "ApplicationModel_DataTransfer",
    "Storage",
    "implement"
] }
# windows-core is already a transitive dep of `windows`; expose it as a
# direct dep so the #[implement] macro's generated `::windows_core::...`
# paths resolve. Same version as `windows` to avoid duplication.
windows-core = "0.58"
image = "0.25"
base64 = "0.22"
